Ass2/src/main/mp/parser/.antlr/MPParser.py
# Generated from c:\Users\VanSon\Desktop\PPL\Assignment_2\src\main\mp\parser\MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'*'", "'<>'", "'<'", 
                     "'='", "<INVALID>", "'-'", "'/'", "<INVALID>", "'>'", 
                     "<INVALID>", "<INVALID>", "'['", "']'", "'..'", "','", 
                     "':'", "':='", "'('", "')'", "';'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "WHILE", "BEGIN", "END", 
                      "FUNCTION", "RETURN", "PROCEDURE", "VAR", "TRUE", 
                      "FALSE", "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", 
                      "STRING", "NOT", "AND", "OR", "DIV", "MOD", "ADD", 
                      "MUL", "NOT_EQUAD", "LESS_THAN", "EQUAL", "LESS_THAN_EQUAL", 
                      "SUB", "DIVISION", "MODULUS", "GREATER_THAN", "GREATER_THAN_EQUAL", 
                      "WITH", "LSB", "RSB", "D_DOT", "COMMA", "COLON", "ASSIGN", 
                      "LB", "RB", "SEMI", "COMMENT_1", "COMMENT_2", "COMMENT_3", 
                      "IDENTIFIER", "INTEGER_TYPE", "REAL_TYPE", "STRINGLIT", 
                      "WS", "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_var_decl_total = 2
    RULE_var_decl = 3
    RULE_type_data = 4
    RULE_type_array = 5
    RULE_func_decl_total = 6
    RULE_list_parameter = 7
    RULE_parameter = 8
    RULE_proc_decl_total = 9
    RULE_statement = 10
    RULE_assignment_statement = 11
    RULE_lhs_assign = 12
    RULE_if_statement = 13
    RULE_while_statement = 14
    RULE_for_statement = 15
    RULE_break_statement = 16
    RULE_continue_statement = 17
    RULE_return_statement = 18
    RULE_compound_statement = 19
    RULE_with_statement = 20
    RULE_func_call_statement = 21
    RULE_list_exp = 22
    RULE_exp = 23
    RULE_exp1 = 24
    RULE_exp2 = 25
    RULE_exp3 = 26
    RULE_exp4 = 27
    RULE_exp5 = 28
    RULE_index_express = 29
    RULE_func_call = 30
    RULE_literal = 31
    RULE_boolean_type = 32

    ruleNames =  [ "program", "decl", "var_decl_total", "var_decl", "type_data", 
                   "type_array", "func_decl_total", "list_parameter", "parameter", 
                   "proc_decl_total", "statement", "assignment_statement", 
                   "lhs_assign", "if_statement", "while_statement", "for_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "compound_statement", "with_statement", "func_call_statement", 
                   "list_exp", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "index_express", "func_call", "literal", "boolean_type" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    FOR=3
    TO=4
    DOWNTO=5
    DO=6
    IF=7
    THEN=8
    ELSE=9
    WHILE=10
    BEGIN=11
    END=12
    FUNCTION=13
    RETURN=14
    PROCEDURE=15
    VAR=16
    TRUE=17
    FALSE=18
    ARRAY=19
    OF=20
    REAL=21
    BOOLEAN=22
    INTEGER=23
    STRING=24
    NOT=25
    AND=26
    OR=27
    DIV=28
    MOD=29
    ADD=30
    MUL=31
    NOT_EQUAD=32
    LESS_THAN=33
    EQUAL=34
    LESS_THAN_EQUAL=35
    SUB=36
    DIVISION=37
    MODULUS=38
    GREATER_THAN=39
    GREATER_THAN_EQUAL=40
    WITH=41
    LSB=42
    RSB=43
    D_DOT=44
    COMMA=45
    COLON=46
    ASSIGN=47
    LB=48
    RB=49
    SEMI=50
    COMMENT_1=51
    COMMENT_2=52
    COMMENT_3=53
    IDENTIFIER=54
    INTEGER_TYPE=55
    REAL_TYPE=56
    STRINGLIT=57
    WS=58
    ERROR_CHAR=59
    ILLEGAL_ESCAPE=60
    UNCLOSE_STRING=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 66
                self.decl()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 71
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_total(self):
            return self.getTypedRuleContext(MPParser.Var_decl_totalContext,0)


        def func_decl_total(self):
            return self.getTypedRuleContext(MPParser.Func_decl_totalContext,0)


        def proc_decl_total(self):
            return self.getTypedRuleContext(MPParser.Proc_decl_totalContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.var_decl_total()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.func_decl_total()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.proc_decl_total()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_decl_totalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Var_declContext)
            else:
                return self.getTypedRuleContext(MPParser.Var_declContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_var_decl_total




    def var_decl_total(self):

        localctx = MPParser.Var_decl_totalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl_total)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(MPParser.VAR)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.var_decl()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.IDENTIFIER):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENTIFIER)
            else:
                return self.getToken(MPParser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def type_array(self):
            return self.getTypedRuleContext(MPParser.Type_arrayContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_var_decl




    def var_decl(self):

        localctx = MPParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MPParser.IDENTIFIER)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 85
                self.match(MPParser.COMMA)
                self.state = 86
                self.match(MPParser.IDENTIFIER)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(MPParser.COLON)
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.state = 93
                self.type_data()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 94
                self.type_array()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 97
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_dataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_type_data




    def type_data(self):

        localctx = MPParser.Type_dataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_data)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def INTEGER_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTEGER_TYPE)
            else:
                return self.getToken(MPParser.INTEGER_TYPE, i)

        def D_DOT(self):
            return self.getToken(MPParser.D_DOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_type_array




    def type_array(self):

        localctx = MPParser.Type_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MPParser.ARRAY)
            self.state = 102
            self.match(MPParser.LSB)
            self.state = 103
            self.match(MPParser.INTEGER_TYPE)
            self.state = 104
            self.match(MPParser.D_DOT)
            self.state = 105
            self.match(MPParser.INTEGER_TYPE)
            self.state = 106
            self.match(MPParser.RSB)
            self.state = 107
            self.match(MPParser.OF)
            self.state = 108
            self.type_data()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_decl_totalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def type_array(self):
            return self.getTypedRuleContext(MPParser.Type_arrayContext,0)


        def list_parameter(self):
            return self.getTypedRuleContext(MPParser.List_parameterContext,0)


        def var_decl_total(self):
            return self.getTypedRuleContext(MPParser.Var_decl_totalContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_func_decl_total




    def func_decl_total(self):

        localctx = MPParser.Func_decl_totalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl_total)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(MPParser.FUNCTION)
            self.state = 111
            self.match(MPParser.IDENTIFIER)
            self.state = 112
            self.match(MPParser.LB)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIER:
                self.state = 113
                self.list_parameter()


            self.state = 116
            self.match(MPParser.RB)
            self.state = 117
            self.match(MPParser.COLON)
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.state = 118
                self.type_data()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 119
                self.type_array()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 122
            self.match(MPParser.SEMI)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 123
                self.var_decl_total()


            self.state = 126
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MPParser.ParameterContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_list_parameter




    def list_parameter(self):

        localctx = MPParser.List_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.parameter()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.SEMI:
                self.state = 129
                self.match(MPParser.SEMI)
                self.state = 130
                self.parameter()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENTIFIER)
            else:
                return self.getToken(MPParser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def type_array(self):
            return self.getTypedRuleContext(MPParser.Type_arrayContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_parameter




    def parameter(self):

        localctx = MPParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(MPParser.IDENTIFIER)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 137
                self.match(MPParser.COMMA)
                self.state = 138
                self.match(MPParser.IDENTIFIER)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(MPParser.COLON)
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.state = 145
                self.type_data()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 146
                self.type_array()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Proc_decl_totalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def list_parameter(self):
            return self.getTypedRuleContext(MPParser.List_parameterContext,0)


        def var_decl_total(self):
            return self.getTypedRuleContext(MPParser.Var_decl_totalContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_proc_decl_total




    def proc_decl_total(self):

        localctx = MPParser.Proc_decl_totalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_proc_decl_total)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(MPParser.PROCEDURE)
            self.state = 150
            self.match(MPParser.IDENTIFIER)
            self.state = 151
            self.match(MPParser.LB)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIER:
                self.state = 152
                self.list_parameter()


            self.state = 155
            self.match(MPParser.RB)
            self.state = 156
            self.match(MPParser.SEMI)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 157
                self.var_decl_total()


            self.state = 160
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_statement(self):
            return self.getTypedRuleContext(MPParser.Assignment_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(MPParser.If_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(MPParser.For_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(MPParser.While_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(MPParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(MPParser.Continue_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(MPParser.Return_statementContext,0)


        def func_call_statement(self):
            return self.getTypedRuleContext(MPParser.Func_call_statementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def with_statement(self):
            return self.getTypedRuleContext(MPParser.With_statementContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_statement




    def statement(self):

        localctx = MPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.assignment_statement()
                pass
